--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -122,6 +122,9 @@
         <!-- check for new messages -->
         <receiver android:name="net.mabako.steamgifts.receivers.CheckForNewMessages" />
 
+        <!-- check for auto join -->
+        <receiver android:name="net.mabako.steamgifts.receivers.CheckForAutoJoin" />
+
         <!-- check for won giveaways -->
         <receiver android:name="net.mabako.steamgifts.receivers.CheckForWonGiveaways" />
     </application>
