--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,6 +24,11 @@ android {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/javax.activation/activation
+    compile 'com.sun.mail:android-mail:1.5.5'
+    compile 'com.sun.mail:android-activation:1.5.5'
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
